tf-study3-ssm/01.vpc.tf
# resource "aws_vpc" "vpc" {
#   cidr_block           = local.vpc_cidr
#   enable_dns_support   = true
#   enable_dns_hostnames = true

#   tags = {
#     Name = "${local.project_name}-vpc-${local.env}-apne2"
#   }
# }

resource "aws_vpc" "vpc" {
  cidr_block           = local.vpc_cidr
  enable_dns_support   = true
  enable_dns_hostnames = true

  # provider = aws.dokyo-region

  tags = {
    Name = "${local.project_name}-vpc-${local.env}-apne2"
  }
}
